cell align fix

--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -76,20 +76,21 @@
 
 .grid .cell {
     width: 100%;
+    display: flex;
 }
 
 .cell.align-left {
-    justify-self: flex-start;
+    justify-content: flex-start;
     text-align: left;
 }
 
 .cell.align-right {
-    justify-self: flex-end;
+    justify-content: flex-end;
     text-align: right;
 }
 
 .cell.align-center {
-    justify-self: center;
+    justify-content: center;
 }
 
 .cell.span-2 {
